# updraft

./: PluginInterface.h  Readme
Assets/: Updraft.icns
Docs/: .gitignore  PluginInterface.h  ProjectProposal.odt  TechnicalSpecification.odt  presentation.odp  (+1 more)
Experiments/Updraft_/: CMakeLists.txt  Updraft_.pro
Experiments/Updraft_/Data/: Thumbs.db
Experiments/Updraft_/scripts/: cpplint.py
Experiments/Updraft_/src/: CoreInterface.h  main.cpp  plugininterface.h  resources.qrc
Experiments/Updraft_/src/ui/: mainwindow.cpp  moc_mainwindow.cxx_parameters
Updraft/: .gitattributes  .gitignore  CMakeLists.txt  READ_ME.txt  build-Maria.bat  build-mac.sh  build-win-vs10.bat  build-win.bat  build.bat
Updraft/CMakeModules/: CommonBuild.cmake  FilterQObject.cmake  FindOsgEarth.cmake  FindosgQt.cmake  StyleCheck.cmake  UnitTest.cmake
Updraft/data/: airfield.tga  initial.earth  initial1.earth  initial2.earth  initial3.earth  turnpoint.tga
Updraft/deploy/: CMakeLists.txt
Updraft/deploy/mac/: deploy-mac.sh  make-dmg.sh
Updraft/deploy/mac/bundle-template/Contents/: Info.plist
Updraft/deploy/mac/bundle-template/Contents/MacOS/: Updraft
Updraft/deploy/mac/bundle-template/Contents/Resources/: Updraft.icns
Updraft/resources/data/: initial1.earth  initial2.earth  initial3.earth  initial4.earth
Updraft/scripts/: cpplint.py  listtodo.sh  newclass.py
Updraft/src/: MapManipulator.h  coreinterface.h  eventinfo.h  fileregistration.h  main.cpp  maplayergroupinterface.h  maplayerinterface.h  mapobject.h  menuinterface.h  plugin_api.h  pluginapi.h  pluginbase.h  sceneviewer.h  settinginterface.h  settingsgrouptype.h  tabinterface.h
Updraft/src/core/: CMakeLists.txt  basicsetting.cpp  basicsetting.h  coloreditor.cpp  coloreditor.h  coreimplementation.cpp  coreimplementation.h  coreinterface.cpp  directoryeditor.cpp  directoryeditor.h  elevationmaplayer.cpp  elevationmaplayer.h  ellipsoidname.cpp  ellipsoidname.h  ellipsoidnameeditor.cpp  ellipsoidnameeditor.h  filetypemanager.cpp  filetypemanager.h  gimbalcompass.cpp  gimbalcompass.h  imagemaplayer.cpp  imagemaplayer.h  main.cpp  maplayer.cpp  maplayer.h  mapmanager.cpp  mapmanager.h  mapmanipulator.cpp  mapmanipulator.h  mapmapobject.h  modelmaplayer.cpp  modelmaplayer.h  nodemaplayer.cpp  nodemaplayer.h  pickaction.cpp  pickaction.h  pickhandler.cpp  pickhandler.h  pluginmanager.cpp  pluginmanager.h  (+27 more)
Updraft/src/core/maps/: updraftarcgistilesource.cpp  updraftarcgistilesource.h
Updraft/src/core/translations/: cs_cz.ts  czech.ts
Updraft/src/core/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  fileopendialog.cpp  fileopendialog.h  filerolesdialog.cpp  filerolesdialog.h  filerolesdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapdownloaddialog.ui  maplayergroup.cpp  maplayergroup.h  menu.cpp  menu.h  settingsbottomview.cpp  settingsbottomview.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingstopview.cpp  settingstopview.h  tab.cpp  tab.h
Updraft/src/libraries/: CMakeLists.txt
Updraft/src/libraries/GeographicLib/: CMakeLists.txt
Updraft/src/libraries/cup/: CMakeLists.txt  cup.cpp  cup.h
Updraft/src/libraries/igc/: CMakeLists.txt  igc.cpp  igc.h
Updraft/src/libraries/igc/tests/: CMakeLists.txt  testigc.cpp  testigc.h  testigc.igc
Updraft/src/libraries/igc/tests/testigc/: testigc.cpp  testigc.h  testigc.igc
Updraft/src/libraries/igc/tests/wrong/: CMakeLists.txt  wrong.cpp  wrong.h  wrong_a_record.igc  wrong_b_record.igc
Updraft/src/libraries/loggers/: CMakeLists.txt  loggerinterface.h
Updraft/src/libraries/loggers/colibri/: CMakeLists.txt  colibri.cpp  colibri.h
Updraft/src/libraries/openairspace/: CMakeLists.txt  airspace.cpp  airspace.h  geometry.cpp  geometry.h  openairspace.cpp  openairspace.h  openairspace_global.h
Updraft/src/libraries/openairspaceparser/: CMakeLists.txt  airspace.cpp  airspace.h  openairspace.cpp  openairspace.h  openairspace_global.h
Updraft/src/libraries/util/: CMakeLists.txt  ellipsoid.cpp  ellipsoid.h  gradient.cpp  gradient.h  linearfunc.h  location.cpp  location.h  units.h  util.h
Updraft/src/libraries/util/tests/: CMakeLists.txt  testlocation.cpp  testlocation.h
Updraft/src/libs/: CMakeLists.txt
Updraft/src/libs/libigc/: CMakeLists.txt  igc.cpp  igc.h
Updraft/src/libs/libigc/tests/: CMakeLists.txt  h_records.igc  testlibigc.cpp  testlibigc.h
Updraft/src/plugins/: CMakeLists.txt
Updraft/src/plugins/airfields/: CMakeLists.txt  aflayer.cpp  aflayer.h  airfield.h  airfields.cpp  airfields.h
Updraft/src/plugins/airspaces/: CMakeLists.txt  airspaces.cpp  airspaces.h  czech.ts  oaengine.cpp  oaengine.h
Updraft/src/plugins/airspaces/parser/: airspace.cpp  airspace.h  openairspace.cpp  openairspace.h  openairspace_global.h
Updraft/src/plugins/flighrecorder/: dialog.ui
Updraft/src/plugins/igcviewer/: CMakeLists.txt  colorings.cpp  colorings.h  czech.ts  graphlabels.cpp  graphlabels.h  igcinfo.cpp  igcinfo.h  igcviewer.cpp  igcviewer.h  infotexts.cpp  infotexts.h  openedfile.cpp  openedfile.h  plot.cpp  plot.h  plotaxes.cpp  plotaxes.h  plotpainters.cpp  plotpainters.h  plotwidget.cpp  plotwidget.h
Updraft/src/plugins/taskdecl/: CMakeLists.txt  assignedarea.h  czech.ts  datahistory.cpp  datahistory.h  taskaxis.cpp  taskaxis.h  taskdata.cpp  taskdata.h  taskdeclaration.cpp  taskdeclaration.h  taskdeclpanel.cpp  taskdeclpanel.h  taskdeclpanel.qrc  taskdeclpanel.ui  taskfile.cpp  taskfile.h  tasklayer.cpp  tasklayer.h  taskpoint.cpp  taskpoint.h  taskpointbutton.cpp  taskpointbutton.h
Updraft/src/plugins/taskdecl/icons/: add_tp_icon.psd  delete_tp_icon.psd  logger_upload_icon_01.psd  save_icon_01.psd  undo_icon_01.psd
Updraft/src/plugins/testplugin/: CMakeLists.txt  plugin.cpp  plugin.h
Updraft/src/plugins/turnpoints/: CMakeLists.txt  czech.ts  tpfile.h  tpfilecupadapter.cpp  tpfilecupadapter.h  tplayer.cpp  tplayer.h  tpmapobject.h  turnpoint.h  turnpoints.cpp  turnpoints.h
Updraft/src/staticplugins/testPlugin/: plugin.cpp  plugin.h
Updraft/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Updraft/translations/: czech.ts
(+331 files in other folders)
