cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")
INCLUDE(StyleCheck)

SET(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY TRUE)

SET(SLOPPY_BUILD OFF CACHE BOOL "Don't require style checks to pass.")

INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG(-Wall HAS_WALL)
IF(HAS_WALL)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
ENDIF(HAS_WALL)

# Handling of output filenames and directories on Windows
IF(WIN32)
	SET(WIN_UPDRAFT_BIN_DIR ${PROJECT_BINARY_DIR}/bin)
	SET(WIN_UPDRAFT_PLUGINS_DIR ${WIN_UPDRAFT_BIN_DIR}/plugins)
	SET(WIN_UPDRAFT_LIB_DIR ${PROJECT_BINARY_DIR}/lib)
ENDIF(WIN32)

ADD_SUBDIRECTORY( src/plugins )
ADD_SUBDIRECTORY( src/core )

FILE (GLOB_RECURSE DATA_FILES data/*)
SET(DATA_DIR ${PROJECT_BINARY_DIR}/data)
IF(WIN32)
  SET(DATA_DIR ${PROJECT_BINARY_DIR}/bin/data)
ENDIF(WIN32)
INSTALL(FILES ${DATA_FILES} DESTINATION ${DATA_DIR} OPTIONAL)
