cmake_minimum_required(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")
INCLUDE(StyleCheck)
INCLUDE(FilterQObject)
INCLUDE(CommonBuild)

SET(CMAKE_SKIP_INSTALL_ALL_DEPENDENCY TRUE)

SET(SLOPPY_BUILD OFF CACHE BOOL "Don't require style checks to pass.")
SET(QUICK_BUILD OFF CACHE BOOL "Don't perform style checks at all.")

SET(UPDATE_TRANSLATIONS OFF CACHE BOOL "Update source translation translations/*.ts")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	INCLUDE(CheckCXXCompilerFlag)
	CHECK_CXX_COMPILER_FLAG(-Wall HAS_WALL)
	IF(HAS_WALL)
	  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
	ENDIF(HAS_WALL)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

SET(DATA_DIR ${PROJECT_BINARY_DIR}/data)
SET(TRANSLATIONS_DST_DIR ${CMAKE_BINARY_DIR})

# Handling of output filenames and directories on Windows
IF(WIN32)
	SET(WIN_UPDRAFT_BIN_DIR ${PROJECT_BINARY_DIR}/bin)
	SET(WIN_UPDRAFT_PLUGINS_DIR ${WIN_UPDRAFT_BIN_DIR}/plugins)
	SET(WIN_UPDRAFT_LIB_DIR ${PROJECT_BINARY_DIR}/lib)
	SET(DATA_DIR ${PROJECT_BINARY_DIR}/bin/data)
	SET(TRANSLATIONS_DST_DIR ${WIN_UPDRAFT_BIN_DIR})
ENDIF(WIN32)

ENABLE_TESTING()

ADD_SUBDIRECTORY( src/plugins )
ADD_SUBDIRECTORY( src/libraries )
ADD_SUBDIRECTORY( src/core )

FILE (GLOB_RECURSE DATA_FILES data/*)
INSTALL(FILES ${DATA_FILES} DESTINATION ${DATA_DIR} OPTIONAL)
