PROJECT(updraft)
FIND_PACKAGE(Qt4 REQUIRED)

VARIABLE_WATCH(STATIC_LIB_DIRS)
VARIABLE_WATCH(STATIC_LIBS)

cmake_minimum_required(VERSION 2.8)

SET(QT_USE_QTOPENGL TRUE)

MESSAGE("-- Configuring core...")

ADD_DEFINITIONS(${QT_DEFINITIONS})

FILE(GLOB_RECURSE CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB         PLUGINAPI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../*.h)
FILE(GLOB_RECURSE CORE_FORMS
	${CMAKE_CURRENT_SOURCE_DIR}/*.ui)
FILE(GLOB_RECURSE CORE_RESOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.qrc)

SET(LANG
	translations/czech.ts
)

QT4_WRAP_CPP(CORE_HEADERS_MOC ${CORE_HEADERS})
QT4_WRAP_UI(CORE_FORMS_HEADERS ${CORE_FORMS})
QT4_ADD_RESOURCES(CORE_RESOURCES_RCC ${CORE_RESOURCES})
QT4_CREATE_TRANSLATION(TRANSLATIONS ${CORE_SOURCES} ${CORE_HEADERS} ${CORE_FORMS} ${LANG})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(
	updraft
	${CORE_SOURCES} 
	${CORE_HEADERS_MOC} 
	${CORE_FORMS_HEADERS}
	${CORE_RESOURCES_RCC}
	${TRANSLATIONS}
	${style-check}
)

ADD_CUSTOM_COMMAND(
	TARGET updraft
	PRE_BUILD
	COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/../../scripts/cpplint.py ${CORE_SOURCES} ${CORE_HEADERS}
)

TARGET_LINK_LIBRARIES(updraft ${QT_LIBRARIES})
INSTALL(TARGETS updraft DESTINATION ${CMAKE_BINARY_DIR})
INSTALL(FILES ${TRANSLATIONS} DESTINATION ${CMAKE_BINARY_DIR}/translations)

