cmake_minimum_required(VERSION 2.8)

PROJECT(updraft)

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(OpenSceneGraph REQUIRED 
osgUtil osgDB osgGA osgViewer osgQt )
#osgUtild osgDBd osgGAd osgViewerd osgQtd)
FIND_PACKAGE(OsgEarth REQUIRED)

SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTXML TRUE)

MESSAGE("-- Configuring core...")

ADD_DEFINITIONS(${QT_DEFINITIONS})

FILE(GLOB_RECURSE CORE_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE CORE_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB         PLUGINAPI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/../*.h)
FILE(GLOB_RECURSE CORE_FORMS ${CMAKE_CURRENT_SOURCE_DIR}/*.ui)
FILE(GLOB_RECURSE CORE_RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.qrc)

SET(LANG
	translations/czech.ts
)

QT4_WRAP_CPP_FILTERED(CORE_HEADERS_MOC_WRAPPED ${CORE_HEADERS})
QT4_WRAP_CPP_FILTERED(PLUGINAPI_HEADERS_MOC_WRAPPED ${PLUGINAPI_HEADERS})
QT4_WRAP_UI(CORE_FORMS_HEADERS ${CORE_FORMS})
QT4_ADD_RESOURCES(CORE_RESOURCES_RCC ${CORE_RESOURCES})
QT4_CREATE_TRANSLATION(TRANSLATIONS ${CORE_SOURCES} ${CORE_HEADERS} ${CORE_FORMS} ${LANG})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(
	updraft
	${CORE_SOURCES} 
	${CORE_HEADERS_MOC_WRAPPED}
	${PLUGINAPI_HEADERS_MOC_WRAPPED}
	${CORE_HEADERS}
	${CORE_FORMS_HEADERS}
	${CORE_RESOURCES_RCC}
	${TRANSLATIONS}
	${style-check}
)

# Handling of output filenames and directories on Windows
IF(WIN32)
	# Sets properties for generic no-config case
	SET_TARGET_PROPERTIES(
		updraft
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY ${WIN_UPDRAFT_BIN_DIR}
		DEBUG_POSTFIX d
	)

	# Sets output path for each config.
	foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
		string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
		SET_TARGET_PROPERTIES(
			updraft
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${WIN_UPDRAFT_BIN_DIR}
		)
	endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
ENDIF(WIN32)

STYLE_CHECK(updraft ${CORE_SOURCES} ${CORE_HEADERS} ${PLUGINAPI_HEADERS})

INCLUDE_DIRECTORIES(SYSTEM
    ${QT_INCLUDE_DIRS}
    ${OPENSCENEGRAPH_INCLUDE_DIRS}
    ${OSGEARTH_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(updraft
    ${QT_LIBRARIES}
    ${OPENSCENEGRAPH_LIBRARIES}
    ${OSGEARTH_LIBRARIES})
INSTALL(TARGETS updraft DESTINATION ${CMAKE_BINARY_DIR} OPTIONAL)
INSTALL(FILES ${TRANSLATIONS} DESTINATION ${CMAKE_BINARY_DIR}/translations OPTIONAL)

