cmake_minimum_required(VERSION 2.8)

PROJECT(updraft)

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(OpenSceneGraph REQUIRED 
osgUtil osgDB osgGA osgViewer osgQt )
#osgUtild osgDBd osgGAd osgViewerd osgQtd)
FIND_PACKAGE(OsgEarth REQUIRED)

SET(QT_USE_QTOPENGL TRUE)
SET(QT_USE_QTXML TRUE)

MESSAGE("-- Configuring core...")

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../libraries)
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DUPDRAFT_CORE)

GATHER_SOURCES(core)

FILE(GLOB_RECURSE lang ${CMAKE_CURRENT_SOURCE_DIR}/*.ts)

IF(WIN32 AND NOT DEBUG)
  MESSAGE("Setting windows subsystem")
  SET(WIN32_LIBRARIES ${QT_QTMAIN_LIBRARY})
  SET(WIN32_TARGET_PROPERTIES "WIN32")
ENDIF(WIN32 AND NOT DEBUG)

ADD_EXECUTABLE(updraft ${WIN32_TARGET_PROPERTIES} ${core_all_sources} ${translations} updraft.rc)

# Handling of output filenames and directories on Windows
IF(WIN32)
	# Sets properties for generic no-config case
	SET_TARGET_PROPERTIES(
		updraft
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY ${WIN_UPDRAFT_BIN_DIR}
		DEBUG_POSTFIX d
	)

	# Sets output path for each config.
	foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
		string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
		SET_TARGET_PROPERTIES(
			updraft
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${WIN_UPDRAFT_BIN_DIR}
		)
	endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
ENDIF(WIN32)

STYLE_CHECK(updraft ${core_sources} ${core_headers} ${pluginapi_headers})

INCLUDE_DIRECTORIES(SYSTEM
    ${QT_INCLUDE_DIRS}
    ${OPENSCENEGRAPH_INCLUDE_DIRS}
    ${OSGEARTH_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(updraft
    ${QT_LIBRARIES}
    ${WIN32_LIBRARIES}
    ${OPENSCENEGRAPH_LIBRARIES}
    ${OSGEARTH_LIBRARIES}
    util)


INSTALL(TARGETS updraft DESTINATION ${CMAKE_BINARY_DIR} OPTIONAL)
INSTALL(FILES ${core_translations_wrapped}
    DESTINATION ${TRANSLATIONS_DST_DIR} OPTIONAL)

ADD_DEFINITIONS(
  -DUPDRAFT_VERSION=\"${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}\") 
