GET_FILENAME_COMPONENT(${LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR} NAME)

cmake_minimum_required(VERSION 2.8)

PROJECT(${LIB_NAME})

FIND_PACKAGE(Qt4 REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_DEFINITIONS(-DLIB_INTERNAL)

FILE(GLOB LIB_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
QT4_WRAP_CPP(LIB_HEADERS_MOC ${LIB_HEADERS})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_LIB)
if(NOT WIN32)	# If it was set on win32 it also added no_debug to debug conf.
	ADD_DEFINITIONS(-DQT_NO_DEBUG)
ENDIF()
ADD_DEFINITIONS(-DQT_SHARED)
ADD_DEFINITIONS(-DQT_DLL)

ADD_LIBRARY(
	${LIB_NAME}
	SHARED
	${LIB_SOURCES} 
	${LIB_HEADERS_MOC} 
)

# Handling of output filenames and directories on Windows
IF(WIN32)
	# Sets properties for generic no-config case
	SET_TARGET_PROPERTIES(
		${LIB_NAME}
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY ${WIN_UPDRAFT_LIBS_DIR}/${LIB_NAME}
		DEBUG_POSTFIX d
	)

	# Sets output path for each config.
	foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
		string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
		SET_TARGET_PROPERTIES(
			${LIB_NAME}
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${WIN_UPDRAFT_LIBS_DIR}/${LIB_NAME}
		)
	endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
ENDIF(WIN32)

STYLE_CHECK(${LIB_NAME} ${LIB_SOURCES} ${LIB_HEADERS})

TARGET_LINK_LIBRARIES(${LIB_NAME} ${QT_LIBRARIES})
INSTALL(
	TARGETS ${LIB_NAME}
	DESTINATION ${CMAKE_BINARY_DIR}/libs/${LIB_NAME}
	OPTIONAL
)

ADD_SUBDIRECTORY(tests)
