GET_FILENAME_COMPONENT(${PLUGIN_NAME} ${CMAKE_CURRENT_SOURCE_DIR} NAME)

cmake_minimum_required(VERSION 2.8)

PROJECT(${PLUGIN_NAME})
FIND_PACKAGE(Qt4 REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})

FILE(GLOB_RECURSE PLUGIN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE PLUGIN_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
QT4_WRAP_CPP(PLUGIN_HEADERS_MOC ${PLUGIN_HEADERS})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)
ADD_DEFINITIONS(-DQT_DLL)

ADD_CUSTOM_TARGET(${PLUGIN_NAME}-style-check python
	${CMAKE_SOURCE_DIR}/scripts/cpplint.py
	${PLUGIN_SOURCES}
	${PLUGIN_HEADERS})

ADD_LIBRARY(
	${PLUGIN_NAME}
	SHARED
	${PLUGIN_SOURCES} 
	${PLUGIN_HEADERS_MOC} 
)

ADD_DEPENDENCIES(${PLUGIN_NAME} ${PLUGIN_NAME}-style-check)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${QT_LIBRARIES})
INSTALL(
	TARGETS ${PLUGIN_NAME}
	DESTINATION ${CMAKE_BINARY_DIR}/plugins/${PLUGIN_NAME}
)
