GET_FILENAME_COMPONENT(${PLUGIN_NAME} ${CMAKE_CURRENT_SOURCE_DIR} NAME)

cmake_minimum_required(VERSION 2.8)

PROJECT(${PLUGIN_NAME})
FIND_PACKAGE(Qt4 REQUIRED)
ADD_DEFINITIONS(${QT_DEFINITIONS})

FILE(GLOB_RECURSE PLUGIN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB_RECURSE PLUGIN_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
QT4_WRAP_CPP(PLUGIN_HEADERS_MOC ${PLUGIN_HEADERS})

INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
if(NOT WIN32)	# If it was set on win32 it also added no_debug to debug conf.
	ADD_DEFINITIONS(-DQT_NO_DEBUG)
ENDIF()
ADD_DEFINITIONS(-DQT_SHARED)
ADD_DEFINITIONS(-DQT_DLL)

ADD_LIBRARY(
	${PLUGIN_NAME}
	SHARED
	${PLUGIN_SOURCES}
	${PLUGIN_HEADERS}
	${PLUGIN_HEADERS_MOC}
)

# Handling of output filenames and directories on Windows
IF(WIN32)
	# Sets properties for generic no-config case
	SET_TARGET_PROPERTIES(
		${PLUGIN_NAME}
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY ${WIN_UPDRAFT_PLUGINS_DIR}/${PLUGIN_NAME}
		DEBUG_POSTFIX d
	)

	# Sets output path for each config.
	foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
		string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
		SET_TARGET_PROPERTIES(
			${PLUGIN_NAME}
			PROPERTIES
			RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${WIN_UPDRAFT_PLUGINS_DIR}/${PLUGIN_NAME}
		)
	endforeach(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
ENDIF(WIN32)

STYLE_CHECK(${PLUGIN_NAME} ${PLUGIN_SOURCES} ${PLUGIN_HEADERS})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${QT_LIBRARIES} igc)
INSTALL(
	TARGETS ${PLUGIN_NAME}
	DESTINATION ${CMAKE_BINARY_DIR}/plugins/${PLUGIN_NAME}
	OPTIONAL
)
